add connection String

--- a/ZeiterfassungPierburg/Web.config
+++ b/ZeiterfassungPierburg/Web.config
@@ -11,8 +11,10 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ZeiterfassungPierburg-20191209101854.mdf;Initial Catalog=aspnet-ZeiterfassungPierburg-20191209101854;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+   <!--   <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ZeiterfassungPierburg-20191209101854.mdf;Initial Catalog=aspnet-ZeiterfassungPierburg-20191209101854;Integrated Security=True"
+      providerName="System.Data.SqlClient" />  -->
+        <add name="DefaultConnection" connectionString="Server=localhost\MSSQLSERVER01;Database=testdb;Trusted_Connection=True" />
+
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
