add CRUD to Fertigungsteil

--- a/ZeiterfassungPierburg/Web.config
+++ b/ZeiterfassungPierburg/Web.config
@@ -13,8 +13,8 @@
   <connectionStrings>
    <!--   <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ZeiterfassungPierburg-20191209101854.mdf;Initial Catalog=aspnet-ZeiterfassungPierburg-20191209101854;Integrated Security=True"
       providerName="System.Data.SqlClient" />  -->
-        <add name="DefaultConnection" connectionString="Server=localhost\MSSQLSERVER01;Database=testdb;Trusted_Connection=True" />
-
+        <add name="DefaultConnection" connectionString="Server=localhost\MSSQLSERVER01;Database=zeiterfassung;Trusted_Connection=True" />
+        <add name="ZeiterfassungConn" connectionString="Data Source=.\MSSQLSERVER01;Initial Catalog=zeiterfassung;Integrated Security=True;Pooling=False" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
