--- a/ZeiterfassungPierburg/ZeiterfassungPierburg.csproj
+++ b/ZeiterfassungPierburg/ZeiterfassungPierburg.csproj
@@ -182,12 +182,12 @@
     <Compile Include="Controllers\MitarbeiterController.cs" />
     <Compile Include="Data\DataAttributes.cs" />
     <Compile Include="Data\DataMapper.cs" />
-    <Compile Include="Data\DBConnection.cs" />
+    <Compile Include="Data\PropertyMappingInfo.cs" />
+    <Compile Include="Data\SQLServer.cs" />
     <Compile Include="Models\BasicModelObject.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\BasicModelObjectAttributes.cs" />
     <Compile Include="Models\Users\AccountViewModels.cs" />
     <Compile Include="Models\Produktion\Fertigungsteil.cs" />
     <Compile Include="Models\Users\IdentityModels.cs" />
