--- a/ZeiterfassungPierburg/ZeiterfassungPierburg.csproj
+++ b/ZeiterfassungPierburg/ZeiterfassungPierburg.csproj
@@ -253,6 +253,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Compile Include="Models\MEBAViewModel.cs" />
     <Content Include="Scripts\adminlte.js" />
     <Content Include="Scripts\adminlte.min.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -260,6 +261,7 @@
     <Content Include="App_Data\zeiterfassung.bak" />
     <Content Include="Content\dist\css\adminlte.css.map" />
     <Content Include="Content\dist\css\adminlte.min.css.map" />
+    <Content Include="App_Data\backup" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
@@ -324,7 +326,7 @@
     <Content Include="Views\Schichtinfo\Create.cshtml" />
     <Content Include="Views\MitarbeiterInSchicht\Create.cshtml" />
     <Content Include="Views\Zeiterfassung\Band\Create.cshtml" />
-    <Content Include="Views\Zeiterfassung\MEBA\Create.cshtml" />
+    <Content Include="Views\Zeiterfassung\MEBA\MEBA.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
