--- a/ZeiterfassungPierburg/Web.config
+++ b/ZeiterfassungPierburg/Web.config
@@ -14,7 +14,7 @@
    <!--   <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ZeiterfassungPierburg-20191209101854.mdf;Initial Catalog=aspnet-ZeiterfassungPierburg-20191209101854;Integrated Security=True"
       providerName="System.Data.SqlClient" />  -->
         <add name="DefaultConnection" connectionString="Server=.\MSSQLSERVER01;Database=zeiterfassung;Trusted_Connection=True" />
-        <add name="ZeiterfassungConn" connectionString="Data Source=.\MSSQLSERVER01;Initial Catalog=zeiterfassung;Integrated Security=True;Pooling=False" />
+        <add name="StringForMartin" connectionString="Data Source=.;Database=zeiterfassung;Trusted_Connection=True" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
