update for differentiation between direct and indirect Zeit

--- a/ZeiterfassungPierburg/ZeiterfassungPierburg.csproj
+++ b/ZeiterfassungPierburg/ZeiterfassungPierburg.csproj
@@ -263,7 +263,7 @@
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Content\dist\css\adminlte.css.map" />
     <Content Include="Content\dist\css\adminlte.min.css.map" />
-    <Content Include="App_Data\db" />
+    <Content Include="App_Data\backup" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
