--- a/ZeiterfassungPierburg/ZeiterfassungPierburg.csproj
+++ b/ZeiterfassungPierburg/ZeiterfassungPierburg.csproj
@@ -53,6 +53,12 @@
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="MiniProfiler, Version=3.2.0.157, Culture=neutral, PublicKeyToken=b44f9351044011a3, processorArchitecture=MSIL">
+      <HintPath>..\packages\MiniProfiler.3.2.0.157\lib\net40\MiniProfiler.dll</HintPath>
+    </Reference>
+    <Reference Include="MiniProfiler.Integrations, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MiniProfiler.Integrations.2.3.1\lib\MiniProfiler.Integrations.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -209,6 +215,7 @@
     <Compile Include="Models\MitarbeiterInSchicht.cs" />
     <Compile Include="Models\Produktion\Produktionsanlage.cs" />
     <Compile Include="Models\SchichtInfo.cs" />
+    <Compile Include="Models\ViewModels\MitarbeiterInSchichtViewModelMEBA.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Tests\DataMappingTests.cs" />
@@ -340,7 +347,9 @@
     <Content Include="Views\NeueZeiterfassung\MEBA.cshtml" />
     <Content Include="Views\NeueZeiterfassung\Create.cshtml" />
     <Content Include="Views\NeueZeiterfassung\CreatePartial.cshtml" />
+    <Content Include="Views\MitarbeiterInSchicht\Indexx.cshtml" />
     <Content Include="Views\MitarbeiterInSchicht\Index.cshtml" />
+    <Content Include="Views\MitarbeiterInSchicht\IndexMEBA.cshtml" />
     <None Include="Web.DebugMartin.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
