--- a/ZeiterfassungPierburg/ZeiterfassungPierburg.csproj
+++ b/ZeiterfassungPierburg/ZeiterfassungPierburg.csproj
@@ -349,10 +349,10 @@
     <Content Include="Views\Schichtinfo\Index.cshtml" />
     <Content Include="Views\Schichtinfo\Create.cshtml" />
     <Content Include="Views\NeueZeiterfassung\Create.cshtml" />
-    <Content Include="Views\MitarbeiterInSchicht\Indexx.cshtml" />
     <Content Include="Views\MitarbeiterInSchicht\Index.cshtml" />
     <Content Include="Views\MitarbeiterInSchicht\IndexMEBA.cshtml" />
     <Content Include="Views\NeueZeiterfassung\CreateMEBA.cshtml" />
+    <Content Include="Views\MitarbeiterInSchicht\Edit.cshtml" />
     <None Include="Web.DebugMartin.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
