--- a/ZeiterfassungPierburg/ZeiterfassungPierburg.csproj
+++ b/ZeiterfassungPierburg/ZeiterfassungPierburg.csproj
@@ -197,6 +197,7 @@
     <Compile Include="Controllers\ModelControllers\NeueZeiterfassungController.cs" />
     <Compile Include="Controllers\ModelControllers\ProduktionsanlageController.cs" />
     <Compile Include="Controllers\ModelControllers\SchichtInfoController.cs" />
+    <Compile Include="Controllers\ModelControllers\TeileInProduktionsanlageController.cs" />
     <Compile Include="Data\DataAttributes.cs" />
     <Compile Include="Data\DataMapper.cs" />
     <Compile Include="Data\PropertyMappingInfo.cs" />
@@ -206,6 +207,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\NeueZeiterfassung\NeueZeiterfassungMEBA.cs" />
+    <Compile Include="Models\Produktion\TeileInProduktionsanlage.cs" />
     <Compile Include="Models\Users\AccountViewModels.cs" />
     <Compile Include="Models\Produktion\Fertigungsteil.cs" />
     <Compile Include="Models\Users\IdentityModels.cs" />
@@ -214,8 +216,10 @@
     <Compile Include="Models\MitarbeiterInSchicht.cs" />
     <Compile Include="Models\Produktion\Produktionsanlage.cs" />
     <Compile Include="Models\SchichtInfo.cs" />
+    <Compile Include="Models\ViewModels\CreateTeileInProduktionsanlageViewModel.cs" />
     <Compile Include="Models\ViewModels\Dashboard.cs" />
     <Compile Include="Models\ViewModels\MitarbeiterInSchichtViewModelMEBA.cs" />
+    <Compile Include="Models\ViewModels\TeileInProduktionsanlageViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Tests\DataMappingTests.cs" />
@@ -353,6 +357,8 @@
     <Content Include="Views\MitarbeiterInSchicht\IndexMEBA.cshtml" />
     <Content Include="Views\NeueZeiterfassung\CreateMEBA.cshtml" />
     <Content Include="Views\MitarbeiterInSchicht\Edit.cshtml" />
+    <Content Include="Views\TeileInProduktionsanlage\Index.cshtml" />
+    <Content Include="Views\TeileInProduktionsanlage\Create.cshtml" />
     <None Include="Web.DebugMartin.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
