--- a/ZeiterfassungPierburg/Web.config
+++ b/ZeiterfassungPierburg/Web.config
@@ -18,7 +18,12 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <authentication mode="None" />
+    <authentication mode="Windows">
+    </authentication>
+
+    <authorization>
+      <deny users="p.ulc@seznam.cz" />
+    </authorization>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
