--- a/ZeiterfassungPierburg/ZeiterfassungPierburg.csproj
+++ b/ZeiterfassungPierburg/ZeiterfassungPierburg.csproj
@@ -188,6 +188,7 @@
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="App_Start\UserAdministration.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ModelControllers\FertigungsteilController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -198,6 +199,7 @@
     <Compile Include="Controllers\ModelControllers\ProduktionsanlageController.cs" />
     <Compile Include="Controllers\ModelControllers\SchichtInfoController.cs" />
     <Compile Include="Controllers\ModelControllers\TeileInProduktionsanlageController.cs" />
+    <Compile Include="Controllers\ModelControllers\ZugriffsrechteController.cs" />
     <Compile Include="Data\DataAttributes.cs" />
     <Compile Include="Data\DataMapper.cs" />
     <Compile Include="Data\PropertyMappingInfo.cs" />
@@ -220,6 +222,7 @@
     <Compile Include="Models\ViewModels\Dashboard.cs" />
     <Compile Include="Models\ViewModels\MitarbeiterInSchichtViewModelMEBA.cs" />
     <Compile Include="Models\ViewModels\TeileInProduktionsanlageViewModel.cs" />
+    <Compile Include="Models\Zugriffsrechte.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -377,6 +380,10 @@
     <Content Include="Views\MitarbeiterInSchicht\Edit.cshtml" />
     <Content Include="Views\TeileInProduktionsanlage\Index.cshtml" />
     <Content Include="Views\TeileInProduktionsanlage\Create.cshtml" />
+    <Content Include="Views\Zugriffsrechte\Create.cshtml" />
+    <Content Include="Views\Zugriffsrechte\Index.cshtml" />
+    <Content Include="Views\Zugriffsrechte\Edit.cshtml" />
+    <Content Include="Views\MitarbeiterInSchicht\test.cshtml" />
     <None Include="Web.DebugMartin.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
