--- a/ZeiterfassungPierburg/Web.config
+++ b/ZeiterfassungPierburg/Web.config
@@ -18,14 +18,18 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+
     <authentication mode="Windows">
     </authentication>
-
     <authorization>
-      <deny users="p.ulc@seznam.cz" />
     </authorization>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+
+    <customErrors mode="On" defaultRedirect="~/Shared/Error">
+
+    </customErrors>
+
   </system.web>
   <system.webServer>
     <modules>
