--- a/ZeiterfassungPierburg/ZeiterfassungPierburg.csproj
+++ b/ZeiterfassungPierburg/ZeiterfassungPierburg.csproj
@@ -387,6 +387,7 @@
     <Content Include="Views\Zugriffsrechte\Index.cshtml" />
     <Content Include="Views\Zugriffsrechte\Edit.cshtml" />
     <Content Include="Views\MitarbeiterInSchicht\test.cshtml" />
+    <Content Include="Views\Shared\Error401.cshtml" />
     <None Include="Web.DebugMartin.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
