--- a/ZeiterfassungPierburg/Web.config
+++ b/ZeiterfassungPierburg/Web.config
@@ -25,11 +25,9 @@
     </authorization>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
- <!--
-    <customErrors mode="On" defaultRedirect="~/Shared/Error">
+ 
+    <customErrors mode="On" defaultRedirect="~/Shared/Error"></customErrors>
 
-    </customErrors>
--->
   </system.web>
   <system.webServer>
     <modules>
