--- a/ZeiterfassungPierburg/Web.config
+++ b/ZeiterfassungPierburg/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Server=.\MSSQLSERVER01;Database=zeiterfassung;Trusted_Connection=True" />
+    <add name="SimpleDataModel" connectionString="data source=.\MSSQLSERVER01;initial catalog=zeiterfassung;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -18,16 +19,15 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-
+    <!--
     <authentication mode="Windows">
+    
     </authentication>
-    <authorization>
-    </authorization>
+    -->
+    <authorization></authorization>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
- 
-    <!--<customErrors mode="On" defaultRedirect="~/Shared/Error"></customErrors> -->  
-
+    <customErrors mode="On" defaultRedirect="~/Shared/Error"></customErrors> 
   </system.web>
   <system.webServer>
     <modules>
@@ -35,8 +35,6 @@
       <remove name="TelemetryCorrelationHttpModule" />
       <add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" preCondition="integratedMode,managedHandler" />
     </modules>
-
-
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
