--- a/ZeiterfassungPierburg/ZeiterfassungPierburg.csproj
+++ b/ZeiterfassungPierburg/ZeiterfassungPierburg.csproj
@@ -403,9 +403,9 @@
     <Content Include="Views\Produktivität\Create.cshtml" />
     <Content Include="Views\TeileInProduktionsanlage\Edit.cshtml" />
     <Content Include="Views\Home\Login.cshtml" />
-    <Content Include="Views\Home\UserDashBoard.cshtml" />
     <Content Include="Views\Shared\_LayoutAdmin .cshtml" />
     <Content Include="Views\Shared\_LayoutManager  - Copy.cshtml" />
+    <Content Include="Views\Zugriffsrechte\Login.cshtml" />
     <None Include="Web.DebugMartin.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
