--- a/ZeiterfassungPierburg/Web.config
+++ b/ZeiterfassungPierburg/Web.config
@@ -27,7 +27,7 @@
     <authorization></authorization>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
-    <customErrors mode="On" defaultRedirect="~/Shared/Error"></customErrors> 
+    <!-- <customErrors mode="On" defaultRedirect="~/Shared/Error"></customErrors> -->
   </system.web>
   <system.webServer>
     <modules>
