--- a/ZeiterfassungPierburg/ZeiterfassungPierburg.csproj
+++ b/ZeiterfassungPierburg/ZeiterfassungPierburg.csproj
@@ -404,8 +404,10 @@
     <Content Include="Views\TeileInProduktionsanlage\Edit.cshtml" />
     <Content Include="Views\Home\Login.cshtml" />
     <Content Include="Views\Shared\_LayoutAdmin .cshtml" />
-    <Content Include="Views\Shared\_LayoutManager  - Copy.cshtml" />
+    <Content Include="Views\Shared\_LayoutPublic.cshtml" />
     <Content Include="Views\Zugriffsrechte\Login.cshtml" />
+    <Content Include="Views\Shared\ErrorAccessDenied.cshtml" />
+    <Content Include="Views\Shared\_LayoutPublicWithoutMenu.cshtml" />
     <None Include="Web.DebugMartin.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
