--- a/ZeiterfassungPierburg/Web.config
+++ b/ZeiterfassungPierburg/Web.config
@@ -10,7 +10,6 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Server=.\MSSQLSERVER01;Database=zeiterfassung;Trusted_Connection=True" />
-    <add name="SimpleDataModel" connectionString="data source=.\MSSQLSERVER01;initial catalog=zeiterfassung;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -21,13 +20,12 @@
   <system.web>
     <!--
     <authentication mode="Windows">
-    
     </authentication>
     -->
     <authorization></authorization>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
-     <!-- <customErrors mode="On" defaultRedirect="~/Shared/Error"></customErrors> -->
+    <customErrors mode="On" defaultRedirect="~/Shared/Error"></customErrors> 
   </system.web>
   <system.webServer>
     <modules>
