--- a/ZeiterfassungPierburg/ZeiterfassungPierburg.csproj
+++ b/ZeiterfassungPierburg/ZeiterfassungPierburg.csproj
@@ -408,6 +408,9 @@
     <Content Include="Views\Shared\ErrorAccessDenied.cshtml" />
     <Content Include="Views\Shared\_LayoutPublicWithoutMenu.cshtml" />
     <Content Include="Views\Mitarbeiter\Details.cshtml" />
+    <Content Include="Views\MitarbeiterInSchicht\Archiv.cshtml" />
+    <Content Include="Views\MitarbeiterInSchicht\ArchivMontage.cshtml" />
+    <Content Include="Views\MitarbeiterInSchicht\ArchivMeBa.cshtml" />
     <None Include="Web.DebugMartin.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
