change boxinfo to box - grey instead of blue by boxes
add typewriter for no apparent reason

--- a/ZeiterfassungPierburg/ZeiterfassungPierburg.csproj
+++ b/ZeiterfassungPierburg/ZeiterfassungPierburg.csproj
@@ -291,6 +291,7 @@
     <Content Include="Content\dist\js\demo.js" />
     <Content Include="Content\font-awesome.min.css" />
     <Content Include="Content\jquery.dataTables.min.css" />
+    <Content Include="Content\TextAnimation.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\font-awesome.min.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
