--- a/ZeiterfassungPierburg/ZeiterfassungPierburg.csproj
+++ b/ZeiterfassungPierburg/ZeiterfassungPierburg.csproj
@@ -303,6 +303,24 @@
     <Content Include="Images\sort_both.png" />
     <Content Include="Images\sort_desc.png" />
     <Content Include="media\image1.png" />
+    <Content Include="media\image10.png" />
+    <Content Include="media\image11.png" />
+    <Content Include="media\image12.png" />
+    <Content Include="media\image13.png" />
+    <Content Include="media\image14.png" />
+    <Content Include="media\image15.png" />
+    <Content Include="media\image16.png" />
+    <Content Include="media\image17.png" />
+    <Content Include="media\image18.png" />
+    <Content Include="media\image19.png" />
+    <Content Include="media\image3.png" />
+    <Content Include="media\image4.png" />
+    <Content Include="media\image5.png" />
+    <Content Include="media\image6.png" />
+    <Content Include="media\image7.png" />
+    <Content Include="media\image8.png" />
+    <Content Include="media\image9.png" />
+    <Content Include="media\media2.png" />
     <Content Include="Scripts\adminlte.js" />
     <Content Include="Scripts\adminlte.min.js" />
     <Content Include="Scripts\bootstrap.js" />
