--- a/ZeiterfassungPierburg/Web.config
+++ b/ZeiterfassungPierburg/Web.config
@@ -18,14 +18,21 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <!--
-    <authentication mode="Windows">
-    </authentication>
-    -->
+    
+
+    
 
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
-    <customErrors mode="On" defaultRedirect="~/Shared/Error"></customErrors> 
+    <!--
+    <authentication mode="Windows">
+    </authentication>
+            <customErrors mode="On" defaultRedirect="~/Shared/Error"></customErrors> 
+
+        -->
+
+
+    <customErrors mode="Off" ></customErrors> 
   </system.web>
   <system.webServer>
     
